--- a/src/main/resources/templates/admin/login.html
+++ b/src/main/resources/templates/admin/login.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <title>登录</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <style>
+        *{
+            padding: 0;
+            margin: 0;
+        }
+    </style>
 </head>
 <body>
-<div class="container-fluid">
+<div class="container-fluid" style="padding: 0">
     <div th:replace="~{ admin/conn :: common_haeder }"></div>
-    <form class="form-horizontal col-md-6 col-md-offset-3"  th:action="@{/toLogin}" method="post">
+    <form class="form-horizontal col-md-6 col-md-offset-3" style="margin-top:3vh " th:action="@{/toLogin}" method="post">
         <div class="form-group">
             <label for="inputEmail3" class="col-sm-2 control-label">账号</label>
             <div class="col-sm-10">
@@ -32,7 +39,7 @@
 <!--        </div>-->
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-default">Sign in</button>
+                <button type="submit" class="btn btn-primary btn-block">登录</button>
             </div>
         </div>
     </form>
